cluster/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lan
  namespace: jellyfin
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
