cluster/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyfin"
    gethomepage.dev/icon: jellyfin.svg
    gethomepage.dev/href: https://jellyfin.disablak.xyz
    gethomepage.dev/group: Apps
    gethomepage.dev/pod-selector: "app=jellyfin"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.disablak.xyz
      secretName: jellyfin-tls
  rules:
    - host: jellyfin.disablak.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
